fixed a bug that dark mode was not rendered in all html pages.

--- a/blog/static/css/darkmode.css
+++ b/blog/static/css/darkmode.css
@@ -9,7 +9,8 @@ h1, h2, h3, h4 {
 body {
     font-size: 10px;
     font-stretch: condensed;
-    background-color: white;
+    background-color: #0c090a;
+    color: white;
 }
 
 .body-wrap {
@@ -49,6 +50,7 @@ body {
 
 .posts-container {
     display: flex;
+    color: white;
 }
 
 .row {
@@ -181,7 +183,8 @@ body {
     border: none !important;
     font-size: 12px;
     border-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: white;
+    color: black;
 }
 
 .btn-edu:hover {
